--- a/style/style.css
+++ b/style/style.css
@@ -96,6 +96,7 @@ header button{
     line-height: 25px;
     width: 100px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .header .image{
@@ -226,6 +227,7 @@ header button{
     text-decoration: none;
     color: var(--color2);
     background-color: var(--color4);
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 700px){
